test/tests/stages/18_structures/valid/extra_credit/semantic_analysis/redeclare_union.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  }
  ;
  union
  identifier(u)
  ;
  union
  identifier(u)
  identifier(my_union)
  =
  {
  const int(1)
  }
  ;
  return
  identifier(my_union)
  .
  identifier(a)
  ;
  }
