test/tests/stages/18_structures/invalid_types/extra_credit/union_type_declarations/member_name_conflicts.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
